1.0.1 added some default content types in addContentFromFile()